syntax = "proto3";
package splits.transactions.unwrap;

import "gogoproto/gogo.proto";

message TransactionRequest {
  option (gogoproto.goproto_getters) = false;

  string from = 1;
  string from_id = 2;
  string ownable_id =  3;
  string value = 4;
}